syntax = "proto3";

option csharp_namespace = "Grpc.Server.Protos";

package greet;
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloList (HelloRequest) returns (HelloReplyList);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message HelloReplyList {
  repeated HelloReply list = 1;
}